[project]
name = "multi-agent-pdf-chat"
version = "0.1.0"
description = "Multi-agent system for answering questions about PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.5",
    "ddgs>=9.10.0",
    "google-genai>=1.65.0",
    "groq>=1.0.0",
    "lancedb>=0.29.2",
    "pypdf>=6.7.4",
    "python-dotenv>=1.2.1",
]
